--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-python-dotenv
+python-dotenv~=1.0.1
 
-Django
+Django~=5.0.3
 Pillow
 
-django-allauth
+django-allauth~=0.61.1
 django-debug-toolbar
 django-environ
 django-extensions
 djangorestframework
 django-filter
 django-ckeditor-5
+django-mptt
+pytils~=0.4.1
 
-celery
+celery~=5.3.6
 redis
